# bookstore

./: .dockerignore  .env  .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  heroku-deploy.yml  workflow-pr.yml
.poetry-cache/artifacts/29/0c/9c/777b6ed98a16f49be4fa67995ab95e1cb2564dc17a94679aa61aa81872/: django_extensions-4.1-py3-none-any.whl
.poetry-cache/artifacts/48/80/69/a894ac7f884ed1834ff92a590df0b36df7fb856ee345536a0376a51359/: factory_boy-3.3.3-py2.py3-none-any.whl
.poetry-cache/artifacts/4e/d0/b0/3bef88f07012a847bd6e997faf736e36737f1236c2783bcec9a34ed0c5/: faker-37.5.3-py3-none-any.whl
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  serializers.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: test_discovery.py  test_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
(+2 files in other folders)
