[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["tiago-silva-batista <tiagosbsantos@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
djangorestframework = "^3.16.1"
django-extensions = "^4.1"
django-debug-toolbar = "^6.0.0"
psycopg2-binary = "^2.9.2"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
factory-boy = "^3.3.3"
black = "^24.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
